--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,7 +1,5 @@
 /* src/index.css */
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@import "@/styles/tailwind.less";
 
 *{
   margin: 0;
