--- a/src/layout/index.less
+++ b/src/layout/index.less
@@ -42,4 +42,38 @@
   position: fixed;
   top: 20%;
   right: 0;
+  
+}
+
+.mode-box{
+  display: flex;
+  justify-content: space-around;
+  padding-top: 15px;
+
+  
+  .mode-item{
+    position: relative;
+    width: 60px;
+    height: auto;
+  }
+
+  .mode-item:hover{
+    cursor: pointer;
+  }
+
+  .active::after{
+    content: '';
+    position: absolute;
+    right: 23px;
+    bottom: 10px;
+    width: 10px;
+    height: 20px;
+    border-right: 4px solid #69b1ff;
+    border-bottom: 4px solid #69b1ff;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+  
 }
